# sudoku

./: Cargo.toml  index.html  styles.css  t.txt
src/: lib.rs  main.rs  random.rs  utils.rs
src/board/: diagnostics.rs  index.rs  metadata.rs  mod.rs
src/models/: board.rs  cells.rs  generate.rs  mod.rs
src/utils/: array.rs
