[package]
name = "sudoku_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.1"
bitmaps = {version = "3.2.0", features = ["std"]}
bounded-integer = {version = "0.5.2", features = ["types"]}
rand = "0.8.5"
