[package]
name = "sudoku_gen"
authors = ["Ben Lewington (ben.lewington91@ntlworld.com)"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
array-init = "2.0.1"
bounded-integer = {version = "0.5.2", features = ["types"]}
thiserror = "1.0.32"
wasm-bindgen = "0.2.81"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8.5"
